# cameraCalibrationProject

./: .gitignore  README.md
Autocalibration_v2/: main.cpp
Autocalibration_v2/configs/: azr_homography_matrix.txt  camParam.txt  homography.txt  initial_settings.xml  out_projection_mat.txt  out_projection_mat_1.txt  test_target_Vehicle_position.txt  train_target_Vehicle_position.txt  usa_homography_matrix.txt
Autocalibration_v2/src/: extrinsic_calibration.h  loadParameters.cpp  loadParameters.h  testSpeed.cpp  testSpeed.h
Camera_Calibration_2/: README.md  testCalibration.py
Camera_Calibration_2/data/: camParam_T1.txt  camParam_cyber.txt  camParam_tunnel.txt  cfg_cyber.json  cfg_tunnel.json  track_info_25-30.txt  track_info_30-35.txt
Camera_Calibration_gps/: README.md  testCalibration.py
calibration_v3/camera-extrinsic-calibration/: CMakeLists.txt  main.cpp
calibration_v3/camera-extrinsic-calibration/configs/: initial_settings.xml  labels.names  out_projection_mat.txt  test_target_Vehicle_position.txt  train_target_Vehicle_position.txt
calibration_v3/camera-extrinsic-calibration/sampleVideo/az_01/: ba0d1cca-cc92-4fde-8ec4-0732a76b2760_j.json
calibration_v3/camera-extrinsic-calibration/sampleVideo/v1/: a3988fa2-b6db-4f1a-b0eb-94ffeeb7f1c5_j.json  calibrationFrame.xml
calibration_v3/camera-extrinsic-calibration/sampleVideo/v2/: 9d7e0a3d-b9f1-4287-be70-26c50dbf7183_j.json
calibration_v3/camera-extrinsic-calibration/src/: extrinsic_calibration.cpp  loadParameters.cpp  loadParameters.h  testSpeed.cpp  testSpeed.h  utils.h
(+47 files in other folders)
